--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html, body {
    line-height: 1.4;
    background-color: #1155cc;
    color: white;
+    margin: 0;
 }
 
 h1, h2 {
@@ -10,15 +11,72 @@ h1, h2 {
    font-weight: bold;
 }
 
-h1 {
-   font-size: 1.4em;
+header {
+    margin: 20px; 
+}
+
+header h1 {
+   font-size: 3em;
+    margin: 0;
 }
 
 h2 {
    font-size: 1em;
 }
 
+section {
+    width: 400px;
+    margin: 0 auto;
+}
+
+section h1 {
+    font-size: 2em;
+    border-bottom: 4px solid #f1c232;
+    text-align: center;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+section div {
+    margin: 0 auto;
+    width: inherit;
+    overflow: auto;
+}
+
 ul {
-   font-family: 'Roboto', helvetica, arial, sans-serif;
-   font-size: 0.85em;
+    float: left;
+    font-family: 'Roboto', helvetica, arial, sans-serif;
+    font-size: 1.2em;
+    list-style-type: none;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    padding: 0;
+    text-align: center;
+}
+
+li {
+    width: 200px;
+    height: 40px;
+    margin: 20px 0;
+    
+}
+
+a {
+  color: white;
+    text-decoration: none;
+    
+}
+
+a:hover {
+ color: #f1c232;
+    text-decoration: underline;
+}
+
+@media (max-width: 500px) {
+    header {
+        background-color: #1c4587;
+        text-align: center;
+        margin: 0 0 20px 0;
+        padding: 15px;
+    }
 }
