--- a/srecht/project1/css/main.css
+++ b/srecht/project1/css/main.css
@@ -2,6 +2,7 @@
 html {
 
     font-family: 'Raleway', sans-serif;
+    
 
 }
 
@@ -13,7 +14,7 @@ body {
 
     height: 90vh;
 
-    background-image: url("/images/strawberryedit.gif");
+    background-image: url("../images/strawberryedit.gif");
 
     background-size: cover;
 
@@ -350,7 +351,7 @@ img {
 }
 
 .image2 {
-     content:url(/images/image1.jpg);
+    content:url(../css/images/image1.jpg);
     position:absolute;
     padding-left: 50px;
     height: 350px;
@@ -517,11 +518,11 @@ img {
 }
 
 .image3 {
-        content:url(/images/image2.jpg);
+        content:url(../images/image2.jpg);
     position:absolute;
     padding-left: 50px;
     height: 350px;
-    bottom:-140em;
+    bottom:-100em;
 }
 
 #imagecaption3 {
@@ -535,7 +536,7 @@ img {
 }
 
 .image4 {
-     content:url(/images/image6.jpg);
+     content:url(../images/image6.jpg);
     position:absolute;
     padding-left: 50px;
     height: 350px;
