--- a/srecht/project1/css/main.css
+++ b/srecht/project1/css/main.css
@@ -2,7 +2,6 @@
 html {
 
     font-family: 'Raleway', sans-serif;
-    
 
 }
 
@@ -14,7 +13,7 @@ body {
 
     height: 90vh;
 
-    background-image: url("../images/strawberryedit.gif");
+    background-image: url("/images/strawberryedit.gif");
 
     background-size: cover;
 
@@ -351,7 +350,7 @@ img {
 }
 
 .image2 {
-    content:url(../css/images/image1.jpg);
+     content:url(../images/image1.jpg);
     position:absolute;
     padding-left: 50px;
     height: 350px;
@@ -522,7 +521,7 @@ img {
     position:absolute;
     padding-left: 50px;
     height: 350px;
-    bottom:-100em;
+    bottom:-140em;
 }
 
 #imagecaption3 {
