--- a/srecht/project1/css/main.css
+++ b/srecht/project1/css/main.css
@@ -167,7 +167,7 @@ img {
 
 }
 .image1 {
-    content:url(/images/image4.jpg);
+    content:url(../images/image4.jpg);
     position:relative;
    top: 20px;
     padding-left: 50px;
