--- a/srecht/project1/css/main.css
+++ b/srecht/project1/css/main.css
@@ -13,7 +13,7 @@ body {
 
     height: 90vh;
 
-    background-image: url("/images/strawberryedit.gif");
+    background-image: url("../images/strawberryedit.gif");
 
     background-size: cover;
 
