--- a/gyu-won/project01/main.css
+++ b/gyu-won/project01/main.css
@@ -11,7 +11,7 @@ a {
 }
 
 div1 {
-	font-family: Proxima Nova, sans-serif;
+	font-family: Proxima Nova, Arial, Helvetica, sans-serif;
 	font-size: 20pt;
 	line-height: 1.6em;
 }
@@ -30,7 +30,7 @@ div3 {
 	padding-right: 40px;
 	margin-top: 80px;
 	position: absolute;
-	font-family: Proxima Nova, sans-serif;
+	font-family: Proxima Nova, Arial, Helvetica, sans-serif;
 	font-size: 15pt;
 	line-height: 1.4em;
 }
@@ -49,7 +49,7 @@ div4 {
 	padding-left: 40px;
 	margin-top: 106px;
 	position: absolute;
-	font-family: Proxima Nova, sans-serif
+	font-family: Proxima Nova, Arial, Helvetica, sans-serif;
 }
 
 figure {
