--- a/tomas/project1interview/messi-interview.css
+++ b/tomas/project1interview/messi-interview.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("ahttp://i62.tinypic.com/vorapt.jpg");
+  background-image: url("http://i62.tinypic.com/vorapt.jpg");
   margin: auto;
 }
 
