--- a/mimi/projects/interviewstyle/css/interviewstyle.css
+++ b/mimi/projects/interviewstyle/css/interviewstyle.css
@@ -91,10 +91,11 @@
     			color: white;
     			font-family: sans-serif;
     			line-height: 1.5em;
-    			font-size: 20pt;
+    			font-size: 19pt;
     			position: relative;
     			z-index: 20;
-    			text-align: justify;
+    			text-align: left;
+                font-weight: 600;
 
     		}
 
@@ -109,7 +110,7 @@
     			font-size: 17pt;
     			position: relative;
     			z-index: 15;
-    			text-align: justify;
+    			text-align: left;
     		}
 
             .pullquoteright {
