--- a/chelsea/project1interview/css/main.css
+++ b/chelsea/project1interview/css/main.css
@@ -31,135 +31,92 @@ body {
     text-align: left;
 }
 
-#remember {
-    position: absolute;
-    width: 550px;
-}
-
 h1 {
     font-family: DinReg, Arial, sans-serif;
     font-size: 35px;
     line-height: 50px;
 }
 
-#liked {
-    position:absolute;
-    width: 500px;
-    top: 700px;
-}
-
 .hara {
     font-family: MinionPro, Times, serif;
-    font-size: 21px;
+    font-size: 18px;
     line-height: 27px;
-    width: 700px;
 }
 
 .db {
-    font-family: DinMed, Arial, sans-serif;
-    font-size: 18px;
-    line-height: 28px;
+    font-family: DinReg, Arial, sans-serif;
+    font-size: 16px;
 }
 
 .speaker {
     font-family: DinReg, Arial, sans-serif;
-    font-size: 15px;
-}
-
-#how {
-    position:absolute;
-    width: 500px;
-    top: 870px;
+    font-size: 12px;
 }
 
 #kenya1 {
     position: absolute;
     left: 450px;
-    top: 700px;
+    top: 886px;
 }
 
 #designb {
     position: absolute;
     left: 410px;
-    top: 874px;
+    top: 1318px;
 }
 
 #kenya2 {
     position: absolute;
-    left: -100px;
-    top: 803x;
+    left: 450px;
+    top: 1413px;
 }
 
 #designb2 {
     position: absolute;
     left: 410px;
-    top: 1385px;
-}
-
-#firstlist {
-    position: absolute;
-    width: 550px;
+    top: 2303px;
 }
 
 #kenya3 {
     position: absolute;
-    left: 450px;
-    top: 1465px;
-}
-
-#kenya3 {
-    position: absolute;
-    left: 450px;
-    top: 1465px;
-}
-
-#circumstance {
-    position: absolute;
-    left: 555px;
-    top: 1780px;
-    width: 550px;
+    left: 20px;
+    top: 2505px;
 }
 
 #designb3 {
     position: absolute;
     left: 410px;
-    top: 2555px;
-}
-
-#embrace {
-    position: absolute;
-    top: 2640px;
-    width: 550px;
+    top: 4200px;
 }
 
 #kenya4 {
     position: absolute;
     left: 450px;
-    top: 2640px;
+    top: 4353px;
 }
 
 #designb4 {
     position: absolute;
     left: 410px;
-    top: 5600px;
+    top: 7664px;
 }
 
 #designb5 {
     position: absolute;
     left: 410px;
-    top: 8005px;
+    top: 7664px;
 }
 
 #kenya5 {
     position: absolute;
     left: 450px;
-    top: 8109px;
+    top: 11210px;
 }
 
 #designb6 {
     position: absolute;
     left: 410px;
-    top: 8275px;
+    top: 11390px;
 }
 
 #kenya6 {
@@ -171,19 +128,13 @@ h1 {
 #designb7 {
     position: absolute;
     left: 410px;
-    top: 8475px;
+    top: 11610px;
 }
 
 #kenya7 {
     position: absolute;
     left: 450px;
-    top: 8360px;
-}
-
-#kenya8 {
-    position: absolute;
-    left: 450px;
-    top: 8552px;
+    top: 11700px;
 }
 
 #might {
@@ -196,73 +147,38 @@ h1 {
     height: 200px;
     float: left;
     position: absolute;
-    left: 560px;
-    top: 1060px;
+    left: 550px;
+    top: 1810px;
 }
 
 #awakenings {
     position: absolute;
-    left: 1000px;
-    top: 1215px;
-    width: 200px;
-}
-
-#strong {
-    position: absolute;
-    top: 1380px;
-    width: 550px;
+    right: 500px;
 }
 
 #discover {
     position: absolute;
-    top: 1465px;
-    width: 550px;
+    left: 140px;
 }
 
 ul {
     position: absolute;
-    left: 520px;
+    left: 100px;
     list-style-type: none;
-    top: 1500px;
-    width: 550px;
 }
 
 #muji {
     height: 200px;
     position: absolute;
-    top: 4750px;
-}
-
-#person {
-    height: 200px;
-    position: absolute;
-    width: 550px;
-    top: 5600px;
+    right: 1000px;
     left: 550px;
 }
 
 #author {
     position: absolute;
-    left: 555px;
+    left: 552px;
     font-size: 35px;
     line-height: 25px;
-    width: 600px;
-    top: 2100px;
-}
-
-#author2 {
-    position: absolute;
-    left: 555px;
-    font-size: 35px;
-    line-height: 45px;
-    width: 600px;
-    top: 5720px;
-}
-
-#crit {
-    position: absolute;
-    width: 550px;
-    top: 2550px;
 }
 
 #muji {
@@ -277,78 +193,17 @@ ul {
     left: 250px;
     font-size: 75px;
     line-height: 25px;
-    top: 3400px;
-    width: 1200px;
 }
 
 #if {
     position: absolute;
-    left: 500px;
-    width: 700px;
-    top: 4100px;
+    left: 530px;
 }
 
 #simple {
     font-size: 200px;
     position: absolute;
-    top: 6300px;
-    left: 1140px;
-    width: 550px;
-}
-
-#question {
-    position: absolute;
-    top: 6500px;
-    width: 600px;
-    left: 200px;
-}
-
-#haptic {
-    height: 200px;
-    position: absolute;
-    top: 7200px;
-}
-
-#fascinate {
-    height: 200px;
-    position: absolute;
-    width: 500px;
-    top: 8000px;
-}
-
-#math {
-    height: 200px;
-    position: absolute;
-    width: 500px;
-    top: 8110px;
-}
-
-#wish {
-    height: 200px;
-    position: absolute;
-    width: 500px;
-    top: 8270px;
-}
-
-#license {
-    height: 200px;
-    position: absolute;
-    width: 500px;
-    top: 8360px;
-}
-
-#motto {
-    height: 200px;
-    position: absolute;
-    width: 500px;
-    top: 8470px;
-}
-
-#hand {
-    height: 200px;
-    position: absolute;
-    width: 500px;
-    top: 8550px;
+    right: 0px;
 }
 
 a:visited, a:active, a:unvisited {
