--- a/tomas/project1interview/messi-interview.css
+++ b/tomas/project1interview/messi-interview.css
@@ -64,16 +64,13 @@ hr {
 #interview {
   height: 1500px;
   width: 572px;
-  border: 2px solid
+  border: 0px solid
     black;
   margin: auto;
   position: relative;
   left: 171px;
   bottom: 70px;
-}
-
-#interview{
-  color: #666666;
+   color: #666666;
   font-size: 14px;
 }
 
@@ -87,11 +84,47 @@ p {
   color: #666666;
   font-size: 14px;
 }
-span {
+
+#speaker {
   font-family: Playfair Display SC;
   letter-spacing: -.6px;
   font-size: 16px;
   margin-right: 8px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -3.8px;
+}
+
+#lowe0 {
+  padding-left: 5.1em;
+    text-indent: 0em;
+  display: inline-block;
+  width: 400px;
+  margin-bottom;
+}
+
+#messi0 {
+  padding-left: 3em;
+    text-indent: 0em;
+  display: inline-block;
+  width: 400px;
+  margin-bottom;
+}
+
+#messi {
+  padding-left: 7em;
+    text-indent: 0em;
+  display: inline-block;
+  width: 400px;
+  margin-bottom;
+}
+
+#lowe {
+  padding-left: 7.1em;
+    text-indent: 0em;
+  display: inline-block;
+  width: 400px;
+  margin-bottom;
 }
 
 #bio {
@@ -125,7 +158,7 @@ span {
   margin: auto;
   position: relative;
   left: px;
-  bottom: 1230px;
+  bottom: 670px;
 }
 
 #img3 {
@@ -140,7 +173,7 @@ span {
   margin: auto;
   position: relative;
   left: px;
-  bottom: 1780px;
+  bottom: 1220px;
 }
 
 #img4 {
@@ -155,5 +188,5 @@ span {
   margin: auto;
   position: relative;
   left: px;
-  bottom: 2336px;
+  bottom: 1776px;
 }
