--- a/tomas/project2tour/4md_neukom.css
+++ b/tomas/project2tour/4md_neukom.css
@@ -33,10 +33,6 @@ width: 100%;
 z-index: 1;
 }
 
-.content {
-  padding-top: 15px;
-}
-
 .header span {
 color: #1f28a7;
 font-family: 'Futura';
@@ -48,7 +44,7 @@ z-index: 1;
 
 
 .space {
-  height: 200px;
+  height: 280px;
 }
 
 #one {
@@ -78,7 +74,7 @@ display: block;
 
 figcaption {
 color: #a3a3a3;
-font-family: 'FuturaLTPro-Book';
+font-family: 'Futura';
 font-size: 12px;
 font-size: 0.75rem;
 line-height: 1.125;
@@ -88,6 +84,7 @@ padding-bottom: 2px;
 
 .col-half~.col-half {
 margin-left: 6.66666667%;
+  padding-top: 12px;
 }
 
 h2 {
@@ -124,9 +121,21 @@ margin: 0;
 }
 
 p {
-font-family: 'FuturaLTPro-Book';
+font-family: 'Futura';
 font-size: 0.9375rem;
 line-height: 1.5;
+margin: 0;
+  display: block;
+-webkit-margin-before: 1em;
+-webkit-margin-after: 1em;
+-webkit-margin-start: 0px;
+-webkit-margin-end: 0px;
+}
+
+li {
+font-family: sans-serif;
+font-size: 1.1rem;
+line-height: .5;
 margin: 0;
   display: block;
 -webkit-margin-before: 1em;
