--- a/tomas/project2tour/7md_tate.css
+++ b/tomas/project2tour/7md_tate.css
@@ -33,13 +33,9 @@ width: 100%;
 z-index: 1;
 }
 
-.content {
-  padding-top: 15px;
-}
-
 .header span {
 color: #1f28a7;
-font-family: 'Futura';
+font-family: 'futura';
 font-size: 1rem;
 position: relative;
 text-transform: uppercase;
@@ -48,7 +44,7 @@ z-index: 1;
 
 
 .space {
-  height: 200px;
+  height: 280px;
 }
 
 #one {
@@ -73,12 +69,12 @@ box-sizing: border-box;
 
 img {
 display: block;
-  width: 100%;
+  max-width: 100%;
 }
 
 figcaption {
 color: #a3a3a3;
-font-family: 'FuturaLTPro-Book';
+font-family: 'futura';
 font-size: 12px;
 font-size: 0.75rem;
 line-height: 1.125;
@@ -88,11 +84,12 @@ padding-bottom: 2px;
 
 .col-half~.col-half {
 margin-left: 6.66666667%;
+padding-top: 12px;
 }
 
 h2 {
 color: #1f28a7;
-font-family: 'Futura';
+font-family: 'helvetica';
 font-size: 1.625rem;
 font-weight: normal;
 letter-spacing: 1px;
@@ -103,7 +100,7 @@ text-transform: uppercase;
 
 h3 {
 color: #1f28a7;
-font-family: 'Futura';
+font-family: 'futura';
 font-size: 18px;
 font-size: 1.125rem;
 font-weight: normal;
@@ -121,12 +118,25 @@ font-weight: bold;
 
 h1, h2, h3, h4, h5, h6 {
 margin: 0;
+font-s
 }
 
 p {
-font-family: 'FuturaLTPro-Book';
-font-size: 0.9375rem;
-line-height: 1.5;
+font-family: 'futura';
+font-size: 1.1rem;
+line-height: 1.4;
+margin: 0;
+  display: block;
+-webkit-margin-before: 1em;
+-webkit-margin-after: 1em;
+-webkit-margin-start: 0px;
+-webkit-margin-end: 0px;
+}
+
+li {
+font-family: sans-serif;
+font-size: 1.1rem;
+line-height: .5;
 margin: 0;
   display: block;
 -webkit-margin-before: 1em;
@@ -141,7 +151,7 @@ clear: left;
 float: right;
 text-align: right;
 color: #1f28a7;
-font-family: 'Futura';
+font-family: 'futura';
 font-size: 1.375rem;
 text-transform: uppercase;
 text-decoration: none;
@@ -152,7 +162,7 @@ text-decoration: none;
 content: "Next";
 text-align: right;
 display: block;
-font-family: 'Futura';
+font-family: 'futura';
 font-size: 1rem;
 }
 
