--- a/yuexin/Project 1 Interview/css/index.css
+++ b/yuexin/Project 1 Interview/css/index.css
@@ -1,11 +1,15 @@
-a:hover {
-	text-decoration:none;
-	color:gray;
-}
-
 a:link {
 	text-decoration:none;
 	color:orange;
+}
+
+a:hover {
+	text-decoration:none;
+	size:1.01em;
+}
+
+a:active {
+	color:black;
 }
 
 p {
