--- a/gyu-won/main.css
+++ b/gyu-won/main.css
@@ -1,3 +1,7 @@
 body {
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 'Akkurat', Arial, sans-serif;
+}
+
+a {
+	text-decoration: none;
 }
