--- a/gyu-won/main.css
+++ b/gyu-won/main.css
@@ -1,7 +1,12 @@
 body {
-	font-family: 'Akkurat', Arial, sans-serif;
+	font-family: 'Akkurat Pro', Arial, sans-serif;
+	line-height: 1.5em;
+}
+
+h3 {
+	font-size: 20px;
 }
 
 a {
-	text-decoration: none;
+	color: black;
 }
