--- a/yuexin/Project 1 Interview/css/index.css
+++ b/yuexin/Project 1 Interview/css/index.css
@@ -27,3 +27,9 @@ body {
 li {
 	list-style-type:circle;
 }
+
+@media only screen and (min-width : 321px) {
+	body {
+		background-image:url(../img/background.jpg);
+	}
+}
