--- a/ji/index.css
+++ b/ji/index.css
@@ -1,6 +1,12 @@
+body {
+	text-align: center;
+	margin-top: 0px;
+	padding-top: 0px;
+}
+
 a {
 	transition-property: color, font-size;
-	transition-duration: 1s;
+	transition-duration: 0.5s;
 	transition-timing-function: ease-in-out;
 	transition-delay: 0.1s;
 }
@@ -8,4 +14,22 @@ a {
 a:hover {
 	color: red;
 	font-size: 20px;
+}
+
+div {
+	width: 100%;
+	height: 100px;
+	background-color: purple;
+	color: white;
+}
+
+h1 {
+	padding: 30px;
+}
+
+@media only screen and (min-width : 320px) and (max-width : 673px) {
+	div {
+		height: 150px;
+		background-color: pink;
+	}
 }
