--- a/srecht/indexmain.css
+++ b/srecht/indexmain.css
@@ -1,12 +1,25 @@
-html {} .project1 {
+html {
+     height: 100%;
+background: rgba(255,93,177,1);
+background: -moz-linear-gradient(top, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,93,177,1)), color-stop(15%, rgba(253,79,169,1)), color-stop(100%, rgba(239,1,124,0.29)));
+background: -webkit-linear-gradient(top, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
+background: -o-linear-gradient(top, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
+background: -ms-linear-gradient(top, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
+background: linear-gradient(to bottom, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5db1', endColorstr='#ef017c', GradientType=0 );
+    background-repeat: no-repeat; 
+    background-size: cover; 
+
+} .project1 {
     font-family: "montserrat";
-    text-decoration-line: none;
-    font-size: 30pt;
-    height: 100px;
-    width: 200px;
+     text-align: center;
+    font-size: 40pt;
+    height: 300px;
+    width: 300px;
     border-radius: 50%;
     background-color: transparent;
-    text-align: center;
+   
     box-sizing: border-box;
     color: white;
     -webkit-animation-name: roll;
@@ -15,27 +28,29 @@ html {} .project1 {
     -webkit-animation-delay: 1.5s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-direction: alternate;
-    webkit-animation-play-state: paused;
 }
 .project1:hover {
-    webkit-animation-play-state: paused;
+    
     background-color: yellow;
+    opacity: 0.6;
+    z-index: 100; 
 }
 @-webkit-keyframes roll {
     0% {
         transform: translate(0);
     }
     100% {
-        transform: translate(800px) rotate(3.25turn);
+        transform: translateY(500px)rotate(3.25turn);
     }
     a {
         font-family: "montserrat";
-        color: magenta;
+        text-decoration-line: none; 
+       
         margin: 0;
         font-family: helvetica;
-        font-size: 60px;
+        font-size: 30pt;
         letter-spacing: 0.025em;
-        transform: translateY(60px) rotate(-45deg);
+        
     }
     body {
         font-family: "Montserrat";
@@ -43,12 +58,20 @@ html {} .project1 {
 }
 h1 {
     font-family: "montserrat";
+    font-size: 20pt; 
 }
 h2 {
     font-family: "montserrat";
 }
-@media screen and (max-width: 300px) {
-    h1 {
-        background-color: lightblue;
-    }
-}
+
+
+@media only screen and (max-width:600px){ 
+    h1 { 
+        background-color: yellow; 
+        width: 30%; 
+    } 
+   .project1 { 
+      font-size: 16pt; 
+   } 
+ } 
+
