--- a/srecht/indexmain.css
+++ b/srecht/indexmain.css
@@ -1,77 +1,86 @@
 html {
-     height: 100%;
-background: rgba(255,93,177,1);
-background: -moz-linear-gradient(top, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,93,177,1)), color-stop(15%, rgba(253,79,169,1)), color-stop(100%, rgba(239,1,124,0.29)));
-background: -webkit-linear-gradient(top, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
-background: -o-linear-gradient(top, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
-background: -ms-linear-gradient(top, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
-background: linear-gradient(to bottom, rgba(255,93,177,1) 0%, rgba(253,79,169,1) 15%, rgba(239,1,124,0.29) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5db1', endColorstr='#ef017c', GradientType=0 );
-    background-repeat: no-repeat; 
-    background-size: cover; 
-
-} .project1 {
+    height: 100%;
+    background: rgba(255, 93, 177, 1);
+    background: -moz-linear-gradient(top, rgba(255, 93, 177, 1) 0%, rgba(253, 79, 169, 1) 15%, rgba(239, 1, 124, 0.29) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 93, 177, 1)), color-stop(15%, rgba(253, 79, 169, 1)), color-stop(100%, rgba(239, 1, 124, 0.29)));
+    background: -webkit-linear-gradient(top, rgba(255, 93, 177, 1) 0%, rgba(253, 79, 169, 1) 15%, rgba(239, 1, 124, 0.29) 100%);
+    background: -o-linear-gradient(top, rgba(255, 93, 177, 1) 0%, rgba(253, 79, 169, 1) 15%, rgba(239, 1, 124, 0.29) 100%);
+    background: -ms-linear-gradient(top, rgba(255, 93, 177, 1) 0%, rgba(253, 79, 169, 1) 15%, rgba(239, 1, 124, 0.29) 100%);
+    background: linear-gradient(to bottom, rgba(255, 93, 177, 1) 0%, rgba(253, 79, 169, 1) 15%, rgba(239, 1, 124, 0.29) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff5db1', endColorstr='#ef017c', GradientType=0);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.project1 {
+    margin-left: 50px; 
     font-family: "montserrat";
-     text-align: center;
+    text-align: center;
     font-size: 40pt;
     height: 300px;
     width: 300px;
-    border-radius: 50%;
+    border-radius: 100%;
     background-color: transparent;
-   
     box-sizing: border-box;
     color: white;
     -webkit-animation-name: roll;
     -webkit-animation-duration: 6s;
     -webkit-animation-timing-function: ease-in-out;
-    -webkit-animation-delay: 1.5s;
+    -webkit-animation-delay: 1s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-direction: alternate;
 }
 .project1:hover {
-    
+     -webkit-animation-play-state: paused;
     background-color: yellow;
     opacity: 0.6;
-    z-index: 100; 
+    z-index: 100;
+    
 }
 @-webkit-keyframes roll {
     0% {
         transform: translate(0);
     }
     100% {
-        transform: translateY(500px)rotate(3.25turn);
+        transform: translateY(50vh)rotate(3.25turn);
     }
+    
+
+    
+    
     a {
         font-family: "montserrat";
-        text-decoration-line: none; 
-       
+        text-decoration-line: none;
         margin: 0;
-        font-family: helvetica;
         font-size: 30pt;
         letter-spacing: 0.025em;
-        
     }
+    
+    
+    
+    
     body {
         font-family: "Montserrat";
     }
-}
 h1 {
     font-family: "montserrat";
-    font-size: 20pt; 
+    font-size: 20pt;
 }
 h2 {
     font-family: "montserrat";
 }
-
-
-@media only screen and (max-width:600px){ 
-    h1 { 
-        background-color: yellow; 
-        width: 30%; 
-    } 
-   .project1 { 
-      font-size: 16pt; 
-   } 
- } 
+@media only screen and (max-width: 600px) {
+    h1 {
+        background-color: yellow;
+        width: 30%;
+    }
+    .project1 {
+        font-size: 16pt;
+    }
+}
+a {
+    font-family: "montserrat";
+    text-decoration-line: none;
+    margin: 0;
+    letter-spacing: 0.025em;
+}
 
