--- a/tomas/project2tour/12md_kassel.css
+++ b/tomas/project2tour/12md_kassel.css
@@ -198,7 +198,7 @@ margin-top: 100px;
 
 
 .pagination a:after {
-content: "Next";
+content: "";
 text-align: right;
 display: block;
 font-family: 'futura';
