--- a/tomas/project2tour/5md_cabinet.css
+++ b/tomas/project2tour/5md_cabinet.css
@@ -182,7 +182,7 @@ text-decoration: none;
 
 
 .pagination a:after {
-content: "Next";
+content: "";
 text-align: right;
 display: block;
 font-family: 'futura';
