--- a/tomas/project2tour/8md_dinosaurs.css
+++ b/tomas/project2tour/8md_dinosaurs.css
@@ -185,7 +185,7 @@ text-decoration: none;
 
 
 .pagination a:after {
-content: "Next";
+content: "";
 text-align: right;
 display: block;
 font-family: 'futura';
