--- a/jingru/eames website/css/main.css
+++ b/jingru/eames website/css/main.css
@@ -22,9 +22,10 @@ body{
 	height: auto;
 	background-color: rgba(255,255,255,0.6);
 	float: left;
-	margin-top: 3%;
-	
+	margin-bottom: 20%;
+	margin-top:30%;
 	padding-left: none;
+	position: fixed;
 	padding-right: 2%;
 	border: 4px solid #f95017;
 }
@@ -147,6 +148,7 @@ li:hover{
 	padding-top: 20%;
 	padding-left: 5%;
 	padding-bottom: 5%;
+	position: fixed;
 }
 
 .footer{
