--- a/chelsea/project2artisttour/css/main.css
+++ b/chelsea/project2artisttour/css/main.css
@@ -3,7 +3,7 @@
 }
 
 a {
-    color: gray;
+    color: blue;
 }
 
 a:hover {
@@ -11,15 +11,15 @@ a:hover {
 }
 
 a:active {
-    color: gray;
+    color: blue;
 }
 
 a:visited {
-    color: gray;
+    color: blue;
 }
 
 a:unvisited {
-    color: gray;
+    color: blue;
 }
 
 #right {
