--- a/jingru/eames website/css/desk.css
+++ b/jingru/eames website/css/desk.css
@@ -56,7 +56,9 @@ body{
 	width:100%;
 	height: 70px;
 	background-color: white;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.1)
+	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+	position:fixed;
+	z-index: 100;
 }
 
 .logo{
