--- a/eunsu/Project3/css/fullPage.css
+++ b/eunsu/Project3/css/fullPage.css
@@ -23,13 +23,161 @@ html, body {
 
 }
 
-#shared{
-   float: left;
-   margin-left: 1%;
-   margin-top: 1%;
+.shared{
+   
+   margin-left: 40%;
+   margin-top: 0%;
+   display: block;
+   border: 5px solid #EEEEEE;
+   background-color: none;
    
     
 }
+
+.pull-me{
+    box-shadow: 0 0 8px black;
+    cursor:pointer;
+    position: relative;
+    margin-top: -20%;
+
+
+}
+
+.pull-me_1{
+    box-shadow: 0 0 8px black;
+    cursor:pointer;
+    position: relative;
+    margin-top: 10%;
+
+
+}
+
+.pull-me_2{
+    box-shadow: 0 0 8px black;
+    cursor:pointer;
+    position: relative;
+    margin-top: 5%;
+
+
+}
+
+.pull-me_3{
+    box-shadow: 0 0 8px black;
+    cursor:pointer;
+    position: relative;
+    margin-top: 12%;
+
+
+}
+.panel{
+    background-color: gray;
+    width:18%;
+    height: 20%;
+    position: relative;
+    margin-left: 41%;
+    display: none;
+    font-size: 10px;
+    font-family: Avenir;
+    
+}
+.panel_1{
+    background-color: gray;
+    width:30%;
+    height: 20%;
+    position: relative;
+    margin-left: 35%;
+    display: none;
+    font-size: 10px;
+    font-family: Avenir;
+
+    
+}
+
+.firstbody{
+    width: 60%;
+    height: 50%;
+    background-color: none;
+    position: relative;
+    margin-left: 20%;
+    margin-bottom: 15%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    border: 3px solid #EEEEEE;
+    font-size: 1em;
+
+}
+
+.firstbody1{
+    width: 30%;
+    height: 40%;
+    background-color: none;
+    position: relative;
+    margin-left: 35%;
+    margin-bottom: 15%;
+    padding-top: 3%;
+    border: 3px solid #EEEEEE;
+    color:black;
+
+}
+.putover{
+    background-color: yellow;
+    cursor: pointer;
+    opacity: 0.1;
+}
+.putover1{
+    background-color: yellow;
+    cursor: pointer;
+    opacity: 0.1;
+}
+.putover2{
+    background-color: yellow;
+    cursor: pointer;
+    opacity: 0.1;
+}
+
+.putover3{
+    background-color: black;
+    cursor: pointer;
+    opacity: 0.1;
+}
+
+.putover3_1{
+    background-color: black;
+    cursor: pointer;
+    opacity: 0.1;
+}
+
+
+.black {
+    color: black;
+    font-family: Avenir;
+
+}
+
+.textwrap{
+    width:50%;
+    height: 30%;
+    background-color: none;
+    position: relative;
+    margin-left: 25%;
+    top: -35%;
+
+}
+
+
+.text {
+    color: black;
+    position: relative;
+    text-align: center;
+    top: 20%;
+    font-family: Avenir, Helvetica;
+    font-size: 1em;
+    
+    background-color: white;
+
+}
+
+
 
 #superContainer {
     height: 100%;
@@ -90,12 +238,12 @@ html, body {
 .fp-controlArrow.fp-prev {
     left: 15px;
     width: 0;
-    border-width: 38.5px 34px 38.5px 0;
+    border-width: 20px 34px 20px 0;
     border-color: transparent #fff transparent transparent;
 }
 .fp-controlArrow.fp-next {
     right: 15px;
-    border-width: 38.5px 0 38.5px 34px;
+    border-width: 20px 0px 20px 30px;
     border-color: transparent transparent transparent #fff;
 }
 .fp-scrollable {
