--- a/greg/projects/project3/css/main.css
+++ b/greg/projects/project3/css/main.css
@@ -11,6 +11,8 @@
 #sv:hover {
 	-webkit-transform: scale(1.1,1.1);
     -moz-transform:scale(1.1,1.1);
+    -ms-transform:scale(1.1,1.1); /* internet explorer */
+    -o-transform:scale(1.1,1.1);
     opacity: 0.7;
     -webkit-opacity: 0.7;
     -moz-opacity: 0.7;
