--- a/eunsu/Projects/Project3/css/fullPage.css
+++ b/eunsu/Projects/Project3/css/fullPage.css
@@ -48,9 +48,20 @@ html, body {
     cursor:pointer;
     position: relative;
     margin-top: 10%;
+    transition-duration:2s;
+    -webkit-transition-duration:2s;
 
 
 }
+.pull-me_1:hover{
+    tranform: tranlateY(100%);
+    -ms-transform:translateY(100%); /* prefix for IE 9 */
+-webkit-transform:translateY(100%); /* prefix for Safari and Chrome */
+
+}
+
+
+
 
 .pull-me_2{
     box-shadow: 0 0 8px black;
