--- a/chelsea/projects/project-3-sharedvoices/site/css/main.css
+++ b/chelsea/projects/project-3-sharedvoices/site/css/main.css
@@ -217,7 +217,7 @@ ul.images2 li {
 @media screen and (max-width: 400px) {
     
     
-/*BRIE'S CODING START*/
+/* CODING START*/
 /*
     #box {
     width:500px;height:2000px;
@@ -265,7 +265,7 @@ ul.images2 {
 ul.images2 li {
 	width: 320px;
 }
-/*BRIE'S CODING END*/
+/* CODING END*/
     
     
     
