--- a/mimi/projects/shared-voices/site/css/profile.css
+++ b/mimi/projects/shared-voices/site/css/profile.css
@@ -7,6 +7,8 @@ body {
   font-weight: lighter;
   padding-bottom: 15px;
   margin: 0;
+  margin-top: 5px;
+  overflow-x: hidden;
 }
 
 #sitecontainer {
@@ -24,7 +26,7 @@ body {
   background: rgba(255,255,255,1);
   height: auto;
   text-align: center;
-  padding: 5px 0px 5px 0px;
+  padding: 10px 0px 10px 0px;
   color: black;
   position: relative;
   z-index: 20;
@@ -61,23 +63,42 @@ body {
   margin-top: -5px;
 }
 
-.info {
-  width: 30%;
+.nav {
+  width: 100%;
   height: 100%;
-  padding: 10px 34% 20px 34%;
   display: none;
-  text-align: justify;
+  text-align: center;
   background: rgba(255,255,255,0.95);
   height: auto;
   position: absolute;
-  border-bottom-right-radius: 200%;
-  border-bottom-left-radius: 200%;
+/*  border-bottom-right-radius: 10% 15%;
+  border-bottom-left-radius: 10% 15%; */
   z-index: 50;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.5em;
 }
 
+.nav ul {
+  list-style: none;
+  padding: 0px 0px 0px 0px;
+  margin: auto;
+}
+
+.nav ul li {
+  display: inline-block;
+  text-align: center;
+  padding: 5px 40px;
+}
+
+.nav ul li a {
+  font-weight: 300;   
+  color: #3d3d3d;
+}
+
+.nav ul li a:hover {
+  color: #204a9e;
+}
 
 .headerpic {
   height: 110vh;
@@ -96,7 +117,7 @@ body {
 .textarea {
   float: left;
   margin: auto;
-  margin-top: -300px;
+  margin-top: -55vh;
   position: relative;
   z-index: 30;
   font-size: 18px;
@@ -114,8 +135,11 @@ body {
 }
 
 .name {
-    font-size: 4.3vw;
+    font-size: 50px;
     line-height: 1em;
+    margin-bottom: -20px;
+    white-space: nowrap;
+
 }
 
 .sidebar {
@@ -132,7 +156,7 @@ body {
 .propic {
   width: 80%;
   border-radius: 10%;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .bodytext {        
@@ -144,39 +168,37 @@ body {
   width: 50%;
 }
 
-.profileurl > a {
+a {
   text-decoration: none;
-  line-height: 2em;
   font-weight: 500;
-  color: #3d3d3d;
+  color: #204a9e;
   -webkit-transition: all .5s ease;
 }
 
-.profileurl > a:hover {
-  margin-left: 10px;
+a:hover {
+  color: #3d3d3d;
 }
 
+iframe {
+  width: 560px;
+  height: 315px; 
+}
 
 @media screen and (max-width: 750px) {
- .info {
-  width: 48%;
-  padding: 10px 25% 40px 25%;
-  font-size: 15px;       
-  font-weight: 400;
-  background: white;
-  border-bottom-left-radius: 40%;
-  border-bottom-right-radius: 40%;
+ .nav ul li{
+  padding: 5px 4%;
   }
 
   .textarea {
-  margin-top: -200px;
-  border-top-right-radius: 50% 5%;
-  border-top-left-radius: 50% 5%;
+  margin-top: -300px;
+/*  border-top-right-radius: 50% 5%;
+  border-top-left-radius: 50% 5%; */
+  border-top-right-radius: 90% 25%;
+  border-top-left-radius: 30% 3%;
   }  
 
   .name {
-  font-size: 30px;
-  text-align: center;
+  font-size: 41px;
   margin-bottom: -20px;
   margin-top: -20px;
   }
@@ -197,12 +219,23 @@ body {
   .bodytext {
     width: 60%;
   }
+
+  iframe {
+    width: 100%;
+    height: 80%;
+  }
 }
 
 @media screen and (max-width: 500px) {
+  .nav ul li {
+    display: block;
+    padding: 0px;
+    line-height: 1.5em;
+  }
+
   .headerpic {
     height: 350px;
-    border-radius: 20% / 10%;
+    border-radius: 15%;
   }
 
   .textarea {
@@ -214,6 +247,7 @@ body {
   .name {
     margin-top: -30px;
     text-align: center;
+    font-size: 45px;
   }
 
   .sidebar {
@@ -237,4 +271,9 @@ body {
     margin-left: 0;
     margin-top: -10px;
   }
+
+  iframe {
+  width: 100%;
+  height: 100%; 
+}
 }
