--- a/yuexin/projects/project-3-sharedvoices/site/css/select_speaker.css
+++ b/yuexin/projects/project-3-sharedvoices/site/css/select_speaker.css
@@ -26,8 +26,10 @@ html {
 	position: absolute; 
 	height: 305px; 
 	width: 330px; 
-	margin-top:310px;
-	margin-left:625px;
+	top: -190px; bottom:0; left: -335px; right:0;
+	margin: auto;
+	/*margin-top:310px;
+	margin-left:625px;*/
 	background-color: transparent; 
 	-webkit-transform: rotate(90deg) skew(30deg); 
 	-webkit-transition: all .2s ease-in-out;
@@ -41,8 +43,8 @@ html {
 	position: absolute; 
 	height: 305px; 
 	width: 330px; 
-	margin-top:310px;
-	margin-left:955px;
+	top: -188px; bottom:0; left: 320px; right:0;
+	margin: auto;
 	background-color: transparent; 
 	-webkit-transform: rotate(90deg) skew(-30deg); 
 	-webkit-transition: all .2s ease-in-out;
@@ -56,10 +58,9 @@ html {
 	position: absolute; 
 	height: 200px; 
 	width: 235px; 
-	margin-top: 620px;
-	margin-left:830px;
+	top: 350px; bottom:0; left: -20px; right:0;
+	margin: auto;
 	background-color: transparent; 
-	top: 0px; 
 	-webkit-transform: rotate(150deg) skew(30deg) scale(1.4); 
 }
 
@@ -211,7 +212,7 @@ hgroup a:nth-of-type(3) img {
 	height:300px;
 	position: absolute;
 	margin-top:-700px;
-	left:1400px;
+	left:1500px;
 }
 
 #third_intro {
