Uploaded website for in-class presentation
html, css, images.

--- a/jose/responsive/bigu/big.css
+++ b/jose/responsive/bigu/big.css
@@ -11,7 +11,7 @@ html {
   margin: auto;
   height:1400px;
   width: 960px;
-  /*border: 1px solid black;*/
+  
   background-color:white;
   position:relative;
 
@@ -75,7 +75,7 @@ html {
   float:right;
   height:400px;
   width: 330px;
-  font-family:Times;
+  font-family:'Neuton', serif;
   display: inline-block;
   font-size:1.0em;
   line-height:1.2em;
@@ -94,7 +94,7 @@ html {
   display: block;
   width: 400px;
   height:35px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   font-size:3.5em;
   margin-left:-135px;
   
@@ -103,6 +103,41 @@ html {
   
 }
 
+.date {
+  position:fixed;
+  display: block;
+  width: 150px;
+  height:50px;
+  font-family:"Montserrat", serif;
+  color:white;
+  font-size:1em;
+  line-height:1.2em;
+  text-align:left;
+  padding-top: 5px;
+  padding-bottom:20px;
+  padding-left:15px;
+  padding-right:15px;
+ 
+  background-color: black;
+  margin-top:-1094px;
+  margin-left: 810px;
+  -webkit-transform: rotate(-90deg);
+ 
+  
+  
+  
+}
+
+.designername {
+  width:400px;
+  font-family:"Montserrat", serif;
+  font-size:1.2em;
+  margin-top:8px;
+  margin-bottom:8px;
+  
+  
+
+}
 
 
 
@@ -110,21 +145,39 @@ html {
   position:absolute;
   display: block;
   width: 560px;
-  height:25px;
-  font-family:Arial, serif;
+  height:60px;
+  font-family:"Montserrat", serif;
   color:black;
   font-size:4em;
   text-align:center;
   padding-top: 5px;
-  padding-bottom:60px;
+  padding-bottom:40px;
+
   -webkit-transform: rotate(-90deg);
   background-color: #17F7FF;
-  margin-top:-910px;
-  margin-left: -240px;
-  -webkit-animation: colorchange 5s infinite 0.6s;
+  margin-top:-919px;
+  margin-left: -245px;
+  -webkit-animation: colorchange 10s infinite 0.8s;
   
   
 }
+
+a{
+  color:black;
+  text-decoration:none;
+  -webkit-animation: colorchange 30s infinite .5s;
+}
+
+a:hover {
+  background-color:#FFDD18;
+}
+
+ul
+{
+    list-style-type: none;
+}
+
+
 
   @-webkit-keyframes colorchange{
     0%    { background: #FFDD18;    }
@@ -137,18 +190,32 @@ html {
 
 @media (max-width: 500px) {
 
+#master {
+  margin: auto;
+  height:865px;
+  width: 500px;
+  
+  background-color:white;
+  position:relative;
+
+}
+
+/*div {
+  border:1px solid red;
+}*/
+
 .name {
   
   display: block;
   width: 920px;
-  height:25px;
-  font-family:Arial, serif;
+  height:20px;
+  font-family:"Montserrat", serif;
   color:black;
   font-size:4em;
   text-align:right;
   padding-top: 5px;
 
-  padding-bottom:60px;
+  padding-bottom:70px;
   -webkit-transform: rotate(-90deg);
   background-color: #17F7FF;
   margin-top:-490px;
@@ -180,10 +247,16 @@ html {
 
 #imageone {
 display:none;
+position:absolute;
+top:0;
+left:0;
 }
 
 #imagetwo {
 display:none;
+position:absolute;
+top:0;
+left:0;
 }
 
 .title {
@@ -193,9 +266,9 @@ display:none;
   display: block;
   width: 400px;
   height:35px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   font-size:3em;
-  margin-left:-135px;
+  margin-left:-140px;
   
   padding-top: 15px;
   
@@ -207,26 +280,67 @@ display:none;
   float:left;
   height:400px;
   width: 330px;
-  font-family:Times;
+  font-family:'Neuton', serif;
   display: inline-block;
   font-size:1.0em;
   line-height:1.2em;
   margin-top:-30px;
-  margin-left:90px;
+  margin-left:105px;
   clear:right;
   
+ }
+
+
+.date {
+  position:absolute;
+  display: block;
+  width: 145px;
+  height:70px;
+  font-family:"Montserrat", serif;
+  color:white;
+  font-size:1em;
+  line-height:1.2em;
+  text-align:left;
+  padding-top: 5px;
+  padding-bottom:20px;
+  padding-left:15px;
+  padding-right:15px;
  
-  }
+  background-color: black;
+  margin-top:-117px;
+  margin-left: -50px;
+  -webkit-transform: rotate(-90deg);
+ 
+  
+  
+  
+}
+
+.designername {
+  width:400px;
+  font-family:"Montserrat", serif;
+  font-size:1.2em;
+  margin-top:8px;
+  margin-bottom:8px;
+  
+  
+
+}
+
+a{
+  color:black;
+  text-decoration:none;
+  -webkit-animation: colorchange 30s infinite .5s;
+}
+
+a:hover {
+  background-color:#FFDD18;
+}
+
+ul {
+    list-style-type: none;
+}
 
 
 
-
-
-
-
-
-
-
-
-
-    }
+ }
