--- a/jose/responsive/array/array.css
+++ b/jose/responsive/array/array.css
@@ -75,7 +75,7 @@ html {
   float:right;
   height:400px;
   width: 330px;
-  font-family:Times;
+  font-family:'Neuton', serif;
   display: inline-block;
   font-size:1.0em;
   line-height:1.2em;
@@ -94,9 +94,9 @@ html {
   display: block;
   width: 400px;
   height:35px;
-  font-family:Arial, serif;
-  font-size:3.5em;
-  margin-left:-10px;
+  font-family:"Montserrat", serif;
+  font-size:3em;
+  margin-left:-13px;
   
   padding-top: 15px;
   
@@ -111,7 +111,7 @@ html {
   display: block;
   width: 560px;
   height:25px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   color:black;
   font-size:4em;
   text-align:center;
@@ -126,6 +126,55 @@ html {
   
 }
 
+.date {
+  position:fixed;
+  display: block;
+  width: 146px;
+  height:50px;
+  font-family:"Montserrat", serif;
+  color:white;
+  font-size:1em;
+  line-height:1.2em;
+  text-align:left;
+  padding-top: 5px;
+  padding-bottom:20px;
+  padding-left:15px;
+  padding-right:15px;
+ 
+  background-color: black;
+  margin-top:-337px;
+  margin-left: 630px;
+  -webkit-transform: rotate(-90deg);
+ 
+  
+  
+  
+}
+
+.designername {
+  width:400px;
+  font-family:"Montserrat", serif;
+  font-size:1.2em;
+  margin-top:8px;
+  margin-bottom:8px;
+  
+}
+
+a{
+  color:black;
+  text-decoration:none;
+  -webkit-animation: colorchange 30s infinite .5s;
+}
+
+a:hover {
+  background-color:#FFDD18;
+}
+
+ul
+{
+    list-style-type: none;
+}
+
   @-webkit-keyframes colorchange{
     0%    { background: #FFDD18;    }
     25%   { background: #17F7FF;    }
@@ -137,12 +186,23 @@ html {
 
     @media (max-width: 500px) {
 
+
+#master {
+  margin: auto;
+  height:800px;
+  width: 960px;
+  /*border: 1px solid black;*/
+  background-color:white;
+  position:relative;
+
+}
+
 .name {
   
   display: block;
   width: 896px;
   height:25px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   color:black;
   font-size:4em;
   text-align:right;
@@ -176,12 +236,28 @@ html {
   
 }
 
+
+#one {
+ display:none;
+}
+
+
 #imageone {
   display:none;
+  position:absolute;
+top:0;
+left:0;
+}
+
+#two {
+ display:none;
 }
 
 #imagetwo {
   display:none;
+  position:absolute;
+top:0;
+left:0;
 }
 
 #content {
@@ -189,7 +265,7 @@ html {
   float:left;
   height:400px;
   width: 330px;
-  font-family:Times;
+  font-family:'Neuton', serif;
   display: inline-block;
   font-size:1.0em;
   line-height:1.2em;
@@ -208,12 +284,46 @@ html {
   display: block;
   width: 400px;
   height:35px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   font-size:3em;
-  margin-left:-40px;
+  margin-left:-30px;
   
   padding-top: 15px;
   
+  
+}
+
+.date {
+  position:absolute;
+  display: block;
+  width: 146px;
+  height:60px;
+  font-family:"Montserrat", serif;
+  color:white;
+  font-size:1em;
+  line-height:1.2em;
+  text-align:left;
+  padding-top: 5px;
+  padding-bottom:20px;
+  padding-left:15px;
+  padding-right:15px;
+ 
+  background-color: black;
+  margin-top:-225px;
+  margin-left: -53px;
+  -webkit-transform: rotate(-90deg);
+ 
+  
+  
+  
+}
+
+.designername {
+  width:400px;
+  font-family:"Montserrat", serif;
+  font-size:1.2em;
+  margin-top:8px;
+  margin-bottom:8px;
   
 }
 
@@ -222,5 +332,4 @@ html {
 
 
 
-
-    }
+}
