--- a/jose/responsive/cover/shared.css
+++ b/jose/responsive/cover/shared.css
@@ -13,7 +13,42 @@ html {
   /*border: 1px solid black;*/
   background-color:white;
   position:relative;
+  z-index:0;
 }
+#content {
+  xposition: absolute;
+  xleft: 50%;
+}
+
+
+#logo {
+  width:100px;
+  float:left;
+  
+}
+
+#shared {
+  position:fixed;
+  z-index: 20;
+  width:200px;
+  float: left;
+  top:0px;
+  display: inline-block;
+  border:0px;
+  top:0;
+  margin-left: 170px;
+  /*background-color:white;*/
+  -webkit-animation: Breathe 3s infinite .3s;
+}
+
+ @-webkit-keyframes Breathe {
+    0%    {opacity:.1;}
+    25%   {opacity:.5;}
+    50%   {opacity:1;}
+    75%   {opacity:.5;}
+    100%  {opacity:.1;}
+    }
+
 
 #imagea {
 
@@ -33,7 +68,16 @@ html {
   margin-top:300px;
   margin-left: 170px;
   /*background-color:white;*/
+  -webkit-animation: fade 3s infinite .3s;
 }
+
+ @-webkit-keyframes fade {
+    0%    {opacity:1;}
+    25%   {opacity:.9;}
+    50%   {opacity:.7;}
+    75%   {opacity:.9;}
+    100%  {opacity:1;}
+    }
 
 #imageb {
 
@@ -53,6 +97,7 @@ html {
   margin-top:300px;
   margin-left: 340px;
   /*background-color:white;*/
+  -webkit-animation: fade 3s infinite .3s;
 }
 
 #imagec {
@@ -73,6 +118,7 @@ html {
   margin-top:475px;
   margin-left: 640px;
   /*background-color:white;*/
+  -webkit-animation: fade 3s infinite .3s;
 }
 
 #imaged {
@@ -93,6 +139,7 @@ html {
   margin-top:475px;
   margin-left: 475px;
   /*background-color:white;*/
+  -webkit-animation: fade 3s infinite .3s;
 }
 
 #imagee {
@@ -113,6 +160,7 @@ html {
   margin-top:650px;
   margin-left: 260px;
   /*background-color:white;*/
+  -webkit-animation: fade 3s infinite .3s;
 }
 
 #imagef {
@@ -133,6 +181,7 @@ html {
   margin-top:650px;
   margin-left: 446px;
   /*background-color:white;*/
+  -webkit-animation: fade 3s infinite .3s;
 }
 
 
@@ -147,6 +196,7 @@ html {
     margin-top:200px;
     margin-left: 300px;
     -webkit-animation: colorchange 5s infinite 0.7s;
+    z-index:2;
     
 }
 
@@ -162,10 +212,7 @@ html {
     -webkit-animation: colorchange 5s infinite 0.5s;
 }
 
-.one p {
-  display:none;
-  
-}
+
 
 .two {
 
@@ -218,6 +265,32 @@ html {
     margin-top:475px;
     margin-left: -280px;
     -webkit-animation: colorchange 5s infinite 0.8s;
+}
+
+.threec {
+  position:absolute;
+  float:left;
+    width: 60px;
+    height:400px;
+    background-color:#FF25B5;
+    display: inline-block;
+    margin-top:500px;
+    margin-left: -430px;
+    -webkit-animation: colorchange 3s infinite 0.8s;
+    z-index:15; opacity:.5;
+}
+
+.threed {
+  position:fixed;
+  float:left;
+    width: 586px;
+    height:20px;
+    background-color:#FF25B5;
+    display: inline-block;
+  top:105px;
+    margin-left: -210px;
+    -webkit-animation: colorchange 3s infinite 0.8s;
+    z-index:1; opacity:.2;
 }
 
 .four {
@@ -277,7 +350,7 @@ html {
     background-color:#17F7FF;
     display: inline-block;
     margin-top:650px;
-    margin-left: 100px;
+    margin-left: 60px;
     -webkit-animation: colorchange 5s infinite 0.4s;
 }
 
@@ -297,7 +370,7 @@ html {
 	position:absolute;
 	float:left;
     width: 120px;
-    height:90px;
+    height:60px;
     background-color:#FFDD18;
     display: inline-block;
     margin-top:825px;
@@ -308,12 +381,12 @@ html {
 .eleven {
 	position:absolute;
 	float:left;
-    width: 120px;
+    width: 80px;
     height:40px;
     background-color:#FFDD18;
     display: inline-block;
     margin-top:825px;
-    margin-left: 700px;
+    margin-left: -400px;
     -webkit-animation: colorchange 5s infinite 0.6s;
 }
 
@@ -323,23 +396,24 @@ html {
 
   z-index:20px;
   display: block;
-  width: 550px;
+  width: 600px;
   height:35px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   color:white;
   font-size:4em;
   text-align:center;
   padding-top: 10px;
   padding-bottom:50px;
+
   -webkit-transform: rotate(-90deg);
   background-color: black;
-  margin-top:-750px;
+  margin-top:200px;
   
   border:solid black;
 
   position: absolute;
   left: 48%;
-  margin-left: -650px;
+  margin-left: -670px;
   
 }
 
@@ -348,7 +422,7 @@ html {
   display: block;
   width: 320px;
   height:130px;
-  font-family:Times, san-serif;
+  font-family:'Neuton', serif;
   color:white;
   font-size:1.1em;
   line-height:1.2em;
@@ -359,22 +433,23 @@ html {
   padding-right:15px;
  
   background-color: black;
-  margin-top:-475px;
-  margin-left: 805px;
+  margin-top:125px;
+  margin-left: 700px;
   border:solid black;
   
-  position: absolute;
-  top:86%;
+  position:absolute;
+  top:10%;
   left: 57%;
-  margin-left: 50px;
+  margin-left: 60px;
+  z-index:15;
 }
 
 .date {
   position:absolute;
   display: block;
-  width: 260px;
+  width: 220px;
   height:250px;
-  font-family:Times, san-serif;
+  font-family:'Neuton', serif;
   color:white;
   font-size:1.0em;
   line-height:1.2em;
@@ -385,20 +460,21 @@ html {
   padding-right:15px;
  
   background-color: black;
-  margin-top:80px;
-  margin-left: 900px;
+  margin-top:-400px;
+  margin-left: 1000px;
   border:solid black;
 
   position: absolute;
-  top:75%;
-  left: 60.5%;
+  top:90%;
+  left: 75%;
   margin-left: 0px;
+  z-index:15;
   
 }
 
 .designername {
   width:400px;
-  font-family:Arial, san-serif;
+  font-family:"Montserrat", serif;
   font-size:1.2em;
   margin-top:12px;
   margin-bottom:12px;
@@ -461,59 +537,87 @@ ul
     100%  { background: #17F7FF;  }
     }
 
+a{
+  color:black;
+  text-decoration:none;
+  -webkit-animation: colorchange 5s infinite 0.7s;
+}
 
+a:hover {
+  background-color:#FFDD18;
+}
+
+
+ 
    
 
 @media (max-width: 500px) {
 
-  .title {
+#master {
+  margin: auto;
+  height:800px;
+  width: 500px;
+  /*border: 1px solid black;*/
+  background-color:white;
+  position:absolute;
+}
 
-  z-index:20px;
+
+div {
+  border: none;
+}
+
+#content {
+  margin: left;
+ height:100vh;
+
+  width: 100%;
+  /*border: 1px solid black;*/
+  background-color:white;
+  position:absolute;
+}
+
+
+
+.title {
+  
   display: block;
-  width: 1180px;
-  height:35px;
-  font-family:Arial, serif;
-  color:white;
+  width: 100vh;
+  height:25px;
+  font-family:"Montserrat", serif;
+  color:black;
   font-size:4em;
   text-align:right;
-  padding-top: 10px;
-  padding-bottom:50px;
-  -webkit-transform: rotate(-90deg);
-  background-color: black;
-  margin-top:-670px;
-  margin-left: -600px;
-  border:solid black;
-
-  position: absolute;
-  left: 25%;
-  margin-left: -650px;
+  padding-top: 5px;
+  margin-top: 308px;
+  margin-left: -311px;
+  left:0;
+  position: relative;
+  padding-bottom:60px;
+  background-color: #17F7FF;
+  -webkit-animation: colorchange 5s infinite 0.6s;
+  border:none;
+  
+  
   
 }
 
 
-#imageb {
 
-  width:100px;
-  float:left;
-  
-}
-
-#bigu {
-  position:absolute;
-  z-index: 10;
-  width:303px;
-  float: left;
-  top:0px;
-  display: inline-block;
-  border:0px;
-  margin-top:-8px;
-  margin-left: 123px;
-  /*background-color:white;*/
-}
 
 
 
 #bjarke {
+  display:none;
+}
+
+
+#imageb {
+display:none;
+  
+}
+
+#bigu {
   display:none;
 }
 
@@ -529,15 +633,7 @@ ul
 }
 
 #link{
-  position:absolute;
-  z-index: 10;
-  width:300px;
-  float: left;
-  top:0px;
-  display: inline-block;
-  border:0px;
-  margin-top:225px;
-  margin-left: 123px;
+display:none;
   /*background-color:white;*/
 }
 
@@ -547,22 +643,12 @@ ul
 
 #imagef {
 
-  width:100px;
-  float:left;
+  display:none;
   
 }
 
 #array{
-  position:absolute;
-  z-index: 10;
-  width:300px;
-  float: left;
-  top:0px;
-  display: inline-block;
-  border:0px;
-  margin-top:536px;
-  margin-left: 123px;
-  /*background-color:white;*/
+  display:none;
 }
 
 .zero {
@@ -571,29 +657,10 @@ display:none;
 }
 
 .one {
- position:absolute;
-  float:left;
-    width: 50px;
-    height:233px;
-    background-color:#17F7FF;
-    display: inline-block;
-    margin-top:-8px;
-    margin-left: 73px;
-    -webkit-animation: colorchange 5s infinite 0.5s;
+  display:none;
 }
 
-.one p {
-  display:block;
-  width: 220px;
-  height:35px;
-  margin-top:65px;
-  margin-left: -85px;
-  font-family:Arial, serif;
-  color:black;
-  font-size:2em;
-  -webkit-transform: rotate(-90deg);
-  
-}
+
 
 .two {
 
@@ -601,19 +668,59 @@ display:none;
 }
 
 .three {
- position:absolute;
-  float:left;
-    width: 50px;
-    height:311px;
+
+  position:absolute;
+  
+    width: 330px;
+    height:300px;
     background-color:#FF25B5;
     display: inline-block;
-    margin-top:225px;
-    margin-left: 73px;
-    -webkit-animation: colorchange 3s infinite 3s;
+    margin-top:0px;
+    margin-left: 87px;
+    -webkit-animation: colorchange 5s infinite .5s;
+    z-index:15; opacity:.4;
+    
+}
+
+.threea {
+
+  position:absolute;
+  float:left;
+    width: 400px;
+    height:240px;
+    background-color:#FF25B5;
+    display: inline-block;
+    margin-top:200px;
+    margin-left: 100px;
+    -webkit-animation: colorchange 3s infinite 0.6s;
+    z-index:15; opacity:.4;
 }
 
 
-
+.threeb {
+    position:absolute;
+    float:left;
+    width: 200px;
+    height:250px;
+    background-color:#FF25B5;
+    display: inline-block;
+    margin-top:410px;
+    margin-left: 260px;
+    -webkit-animation: colorchange 4s infinite 0.6s;
+    z-index:15; opacity:.6;
+}
+.threed {
+ position:fixed;
+  float:left;
+    width: 150px;
+    height:20px;
+    background-color:#FF25B5;
+    display: inline-block;
+  top:105px;
+    margin-left: 280px;
+    -webkit-animation: colorchange 3s infinite 0.8s;
+    z-index:1; opacity:.2;
+}
 .four {
   display:none;
 }
@@ -623,15 +730,7 @@ display:none;
 }
 
 .six {
-  position:absolute;
-  float:left;
-    width: 50px;
-    height:299px;
-    background-color:#FFDD18;
-    display: inline-block;
-    margin-top:536px;
-    margin-left: 73px;
-    -webkit-animation: colorchange 5s infinite 0.5s;
+  display:none;
 }
 
 .seven {
@@ -655,14 +754,14 @@ display:none;
   display:none;
 }
 
-.date {
+.info {
   position:absolute;
   display: block;
   width: 260px;
-  height:232px;
-  font-family:Times, san-serif;
+  height:160px;
+  font-family:'Neuton', serif;
   color:white;
-  font-size:1.0em;
+  font-size:1.1em;
   line-height:1.2em;
   text-align:left;
   padding-top: 15px;
@@ -671,20 +770,47 @@ display:none;
   padding-right:15px;
  
   background-color: black;
-  margin-top:240px;
-  margin-left: 900px;
+  margin-top:-363px;
+  margin-left: -100px;
+  border:solid black;
+  
+  position:relative;
+  
+  z-index:15;
+}
+
+
+
+
+
+.date {
+  position:absolute;
+  display: block;
+  width: 260px;
+  height:200px;
+  font-family:'Neuton', serif;
+  color:white;
+  font-size:.9em;
+  line-height:1.1em;
+  text-align:left;
+  padding-top: 5px;
+  padding-bottom:50px;
+  padding-left:15px;
+  padding-right:15px;
+ 
+  background-color: black;
+  margin-top:-190px;
+  margin-left: -280px;
   border:solid black;
 
-  position: absolute;
-  top:86%;
-  left: 22%;
-  margin-left: 0px;
+  
+
   
 }
 
 .designername {
   width:400px;
-  font-family:Arial, san-serif;
+  font-family:"Montserrat", serif;
   font-size:1.2em;
   margin-top:12px;
   margin-bottom:12px;
@@ -693,41 +819,42 @@ display:none;
 }
 
 .square {
-    width: 400px;
-    height:230px;
-    /*border:3px solid red;*/
-    position:absolute;
-    z-index:15;
-    margin-top:-10px;
-    margin-left:83px;
+   display:none;
 
 }
 
 .squareb {
-    width: 330px;
-    height:300px;
-    /*border:3px solid red;*/
-    position:absolute;
-    z-index:15;
-    margin-top:230px;
-    margin-left:83px;
+   display:none;
 
 }
 
 .squarec {
-    width: 335px;
-    height:290px;
-    /*border:3px solid red;*/
-    position:absolute;
-    z-index:15;
-    margin-top:540px;
-    margin-left:83px;
-
-}
-
-.info {
   display:none;
+
 }
+
+#logo {
+  width:100px;
+  float:left;
+  
+}
+
+#shared {
+  position:absolute;
+  z-index: 20;
+  width:180px;
+  float: left;
+  top:0px;
+  display: inline-block;
+  border:0px;
+  margin-top:0px;
+  margin-left: 87px;
+  /*background-color:white;*/
+  -webkit-animation: Breathe 3s infinite .3s;
+}
+
+
+
 
 span {
   position: absolute;
