--- a/jose/responsive/linknyc/linknyc.css
+++ b/jose/responsive/linknyc/linknyc.css
@@ -44,6 +44,7 @@ html {
   width:165px;
   float:right;
   margin-top:-400px;
+  margin-right:50px;
 }
 
 
@@ -57,6 +58,7 @@ html {
   width:165px;
   float:right;
   margin-top:-210px;
+  margin-right:50px;
 }
 
 #blocktwo {
@@ -69,7 +71,7 @@ html {
   float:right;
   height:400px;
   width: 330px;
-  font-family:Times;
+  font-family:'Neuton', serif;
   display: inline-block;
   font-size:1.1em;
   line-height:1.3em;
@@ -88,7 +90,7 @@ html {
   display: block;
   width: 400px;
   height:35px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   font-size:3.5em;
   margin-left:-200px;
   
@@ -105,7 +107,7 @@ html {
   display: block;
   width: 550px;
   height:25px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   color:black;
   font-size:4em;
   text-align:center;
@@ -117,6 +119,55 @@ html {
   margin-left: -228px;
    -webkit-animation: colorchange 5s infinite 0.6s;
   
+}
+
+.date {
+  position:fixed;
+  display: block;
+  width: 146px;
+  height:50px;
+  font-family:"Montserrat", serif;
+  color:white;
+  font-size:1em;
+  line-height:1.2em;
+  text-align:left;
+  padding-top: 5px;
+  padding-bottom:20px;
+  padding-left:15px;
+  padding-right:15px;
+ 
+  background-color: black;
+  margin-top:-223px;
+  margin-left: 875px;
+  -webkit-transform: rotate(-90deg);
+ 
+  
+  
+  
+}
+
+.designername {
+  width:400px;
+  font-family:"Montserrat", serif;
+  font-size:1.2em;
+  margin-top:8px;
+  margin-bottom:8px;
+  
+}
+
+a{
+  color:black;
+  text-decoration:none;
+  -webkit-animation: colorchange 30s infinite .5s;
+}
+
+a:hover {
+  background-color:#FFDD18;
+}
+
+ul
+{
+    list-style-type: none;
 }
 
   @-webkit-keyframes colorchange{
@@ -132,12 +183,22 @@ html {
 @media (max-width: 500px) {
 
 
+#master {
+  margin: auto;
+  height:800px;
+  width: 960px;
+  /*border: 1px solid black;*/
+  background-color:white;
+  position:relative;
+
+}
+
 .name {
   
   display: block;
   width: 1000px;
   height:25px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   color:black;
   font-size:4em;
   text-align:right;
@@ -183,12 +244,12 @@ html {
   float:left;
   height:400px;
   width: 330px;
-  font-family:Times;
+  font-family:'Neuton', serif;
   display: inline-block;
   font-size:1.1em;
   line-height:1.3em;
   margin-top:-10px;
-  margin-left:80px;
+  margin-left:90px;
   
   
  
@@ -202,15 +263,62 @@ html {
   display: block;
   width: 400px;
   height:35px;
-  font-family:Arial, serif;
+  font-family:"Montserrat", serif;
   font-size:3em;
-  margin-left:-90px;
+  margin-left:-80px;
   
   padding-top: 15px;
   
 }
 
+.date {
+  position:absolute;
+  display: block;
+  width: 148px;
+  height:60px;
+  font-family:"Montserrat", serif;
+  color:white;
+  font-size:1em;
+  line-height:1.2em;
+  text-align:left;
+  padding-top: 5px;
+  padding-bottom:20px;
+  padding-left:15px;
+  padding-right:15px;
+ 
+  background-color: black;
+  margin-top:-50px;
+  margin-left: -60px;
+  -webkit-transform: rotate(-90deg);
+ 
+  
+  
+  
+}
 
+.designername {
+  width:400px;
+  font-family:"Montserrat", serif;
+  font-size:1.2em;
+  margin-top:8px;
+  margin-bottom:8px;
+  
+}
+
+a{
+  color:black;
+  text-decoration:none;
+  -webkit-animation: colorchange 30s infinite .5s;
+}
+
+a:hover {
+  background-color:#FFDD18;
+}
+
+ul
+{
+    list-style-type: none;
+}
 
 
  }
